<resources>
    <string name="app_name">Assignment</string>
    <string name="DROP_TABLE">DROP TABLE</string>
    <string name="Login">Housing Officer</string>
    <string name="signup">Applicant</string>
    <string name="first">Welcome To MicroHousing System</string>
    <string name="SignUp">SignUp</string>
    <string name="one">Username</string>
    <string name="password">Password</string>
    <string name="fullname">FullName</string>
    <string name="email">Email</string>
    <string name="income">Monthly Income</string>
    <string name="login1">Login</string>
    <string name="logout">LogOut</string>
</resources>
