<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="532dp"
        android:background="#9F03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/SignUp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:background="#9CFFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/one"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.006" />

    <EditText
        android:id="@+id/fullnameEditText"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:background="#9CFFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:background="#9CFFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <EditText
        android:id="@+id/monthEditText"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:background="#9CFFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/income"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:background="#9CFFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <ImageButton
        android:id="@+id/signupImageBtn"
        android:layout_width="128dp"
        android:layout_height="59dp"
        android:layout_marginBottom="64dp"
        android:background="#FFFFFF"
        android:onClick="signupImageButton"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monthEditText"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/loginsBtn"
        android:layout_width="151dp"
        android:layout_height="32dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="28dp"
        android:background="#03A9F4"
        android:onClick="Login"
        android:text="Login"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupImageBtn"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>