<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="413dp"
        android:layout_height="79dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="532dp"
        android:background="#9F03A9F4"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:background="#9CFFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/one"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:background="#9CFFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/loginImageBtn"
        android:layout_width="178dp"
        android:layout_height="62dp"
        android:background="#00FFFDFD"
        android:onClick="loginImageButton"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.324"
        app:srcCompat="@drawable/one" />

</androidx.constraintlayout.widget.ConstraintLayout>